fixed overflow

--- a/public/style.scss
+++ b/public/style.scss
@@ -34,7 +34,6 @@ body {
 	margin:0;
 	letter-spacing: 0.5px;
 	min-height:100vh;
-	overflow:hidden;
 }
 h1, h2, h3, h4, h5 {
 
